<resources>
    <string name="app_name">Sassa App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">ID Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_logout">Logout</string>
    <string name="sassa_application">Sassa Application</string>
    <string name="sassa_itechhub_co_za">info.sassa@itechhub.co.za</string>
    <string name="sassa_user_profile">Sassa user profile</string>
    <string name="welcome">WELCOME</string>
    <string name="announcement">Announcement</string>
    <string name="transactions">Transactions</string>
    <string name="balances">Balances</string>
    <string name="sassa_offices">Sassa Offices</string>
    <string name="special_doctors">Special Doctors</string>
    <string name="sassa_app_services">Sassa App Services</string>
    <string name="communication_details">Communication Details</string>
    <string name="email_sassa">Email Sassa</string>
    <string name="sassa_help_line">Sassa Help Line</string>
</resources>
